[gd_scene load_steps=2 format=3 uid="uid://krwk7aduwjom"]

[ext_resource type="Script" path="res://scripts/gui/map_panel_right.gd" id="1_7d7so"]

[node name="Map_Panel_Right" type="Control"]
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_7d7so")

[node name="MarginContainer2" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(235, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="RightVBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2/RightVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/RightVBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/RightVBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="DistrictName" type="Label" parent="MarginContainer2/RightVBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "<District name>"
autowrap_mode = 3

[node name="DistrictDescription" type="Label" parent="MarginContainer2/RightVBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "<District desc>"
autowrap_mode = 3

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer2/RightVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/RightVBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/RightVBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="PoIName" type="Label" parent="MarginContainer2/RightVBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "<PoI name>"
autowrap_mode = 3

[node name="PoIDescription" type="Label" parent="MarginContainer2/RightVBoxContainer/PanelContainer2/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "<PoI desc>"
autowrap_mode = 3
